tests/semantic_errors/err05_void_return_val.java
public class Error05 {
    public static void test() {
        return 10; // Error: Void method cannot return a value
    }
    public static void main(String[] args) {
    }
}
